--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-resizable-panels": "^4.0.13",
     "react-router-dom": "^7.11.0",
     "recharts": "2.15.4",
+    "resend": "^6.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
