--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
     "next-themes": "^0.4.6",
+    "prom-client": "^15.1.3",
     "react": "^19",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19",
