--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "date-fns": "^4.1.0",
     "elysia": "^1.4.19",
     "embla-carousel-react": "^8.6.0",
+    "geoip-lite": "^1.4.10",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
@@ -71,13 +72,16 @@
     "resend": "^6.6.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "ua-parser-js": "^2.0.7",
     "vaul": "^1.1.2",
     "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/geoip-lite": "^1.4.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/ua-parser-js": "^0.7.39",
     "prisma": "^7.2.0",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.4.0"
