--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,15 @@ services:
     image: postgres:16-alpine
     restart: always
     ports:
-      - '5432:5432'
+      - "5432:5432"
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: bbq123
       POSTGRES_DB: gateway
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -24,7 +24,7 @@ services:
     image: nginx:alpine
     restart: unless-stopped
     ports:
-      - '8081:80'
+      - "8081:80"
     volumes:
       - ./docker/nginx1/index.html:/usr/share/nginx/html/index.html:ro
     networks:
@@ -35,7 +35,7 @@ services:
     image: nginx:alpine
     restart: unless-stopped
     ports:
-      - '8082:80'
+      - "8082:80"
     volumes:
       - ./docker/nginx2/index.html:/usr/share/nginx/html/index.html:ro
     networks:
@@ -48,11 +48,9 @@ services:
       dockerfile: Dockerfile
     restart: unless-stopped
     ports:
-      - '80:80'
+      - "80:80"
     env_file:
       - .env.production
-    environment:
-      - DATABASE_URL=postgresql://postgres:password@db:5432/gateway?schema=public
     depends_on:
       db:
         condition: service_healthy
